@@ -3,6 +3,7 @@
 - Now attempts to simplify OFFSET() functions out of the spreadsheet at compile time (the function is NOT supported at runtime)
 - COUNT() functions are now replaced with their values if possible at compile time
 - New option for cells_that_can_be_set_at_runtime = :named_references_only that only creates settable values for references that have been set in named_references_that_can_be_set_at_runtime.
+- Fixed a bug in array formulae expansion: now copes with functions that have a variable number of arguments
 
 # 0.1.9
 
